Fix whitespace